# desolve

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: deploy-docs.yml
desolve/: DESolver.py  methods_ark.py  methods_esdirk.py  methods_etrs.py  methods_glee.py  methods_glee_eimex.py  methods_ide.py  methods_imex_mrk.py  methods_mrk.py  methods_rk.py  methods_symplectic.py  problems_ODEs.py  problems_PDEs.py
notebooks/: BackwardEulerWErrors.ipynb  SimpleTest-FE.ipynb  SimpleTest.ipynb  TestAdvection1D.ipynb  TestAdvectionReaction1D.ipynb  TestAdvectionReaction1DPeriodic-TESTJACOBIAN.ipynb  TestAdvectionReaction1DPeriodic.ipynb  TestAdvectionReaction1DSplit.ipynb  TestGLEEBEKiller.ipynb  TestImplicitGLEE.ipynb  TestLorenz63.ipynb  TestLorenz63_Statistics.ipynb  TestMRAdvection1D.ipynb  TestMRIMEXAdvectionDiffusion1D.ipynb  TestMRIMEXAdvectionDiffusionPaper.ipynb  TestMRIMEXAdvectionDiffusionPaperPlots.ipynb  TestNavierStokes2D.ipynb
notebooks/HighlightSlide2023/: TestAdvectionReaction1DPeriodic-2S-ICERM.ipynb  TestAdvectionReaction1DPeriodic-2S-ICERM2.ipynb  TestAdvectionReaction1DPeriodic-2S-ICERM3.ipynb  TestAdvectionReaction1DPeriodic.ipynb  TestAdvectionReaction1DPeriodic10.ipynb  TestAdvectionReaction1DPeriodic5.ipynb  TestAdvectionReaction1DPeriodicS2.ipynb  TestMRIMEXAdvectionDiffusionPaperPlots.ipynb
reproducibility/Constantinescu_2021/: README.md  flux-function.eps  mrk2-imex-be-nc-stiff.eps  mrk2-imex-be-nc.eps  mrk2-imex-be.eps  (+6 more)
site/: astro.config.mjs  package-lock.json  package.json
tests/: test_symplectic_methods.py
(+13 files in other folders)
